Update currency display in invoice forms and reports from "ریال" to "تومان" for consistency; enhance README.md with quick start instructions and clarify the inclusion of build directories in the repository; modify .gitignore to retain build folders for accessibility.

--- a/.gitignore
+++ b/.gitignore
@@ -9,8 +9,8 @@ x86/
 [Aa][Rr][Mm]/
 [Aa][Rr][Mm]64/
 bld/
-[Bb]in/
-[Oo]bj/
+# [Bb]in/ - این پوشه در Git ذخیره می‌شود تا فایل‌های build در دسترس باشند
+# [Oo]bj/ - این پوشه در Git ذخیره می‌شود تا فایل‌های میانی در دسترس باشند
 [Ll]og/
 [Ll]ogs/
 
